--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,82 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo_pusat_kerupuk.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="keywords" content="kerupuk, aneka kerupuk, kerupuk napoleon, kerupuk bunga merah, kerupuk shinjuku, kerupuk cap kapal" />
+    <meta 
+    name="keywords" 
+    content="
+    kerupuk, 
+    aneka kerupuk, 
+    kerupuk napoleon, 
+    kerupuk bunga merah, 
+    kerupuk shinjuku, 
+    kerupuk cap kapal,
+    kerupuk jengkol,
+    kerupuk kasandra kuning,
+    kerupuk kecipir warna,
+    kerupuk kelabang kuning,
+    kerupuk mawar kuning,
+    kerupuk sisir warna,
+    kerupuk tersanjung warna,
+    kerupuk udang mas,
+    kerupuk kelabang cream,
+    kerupuk makaroni ayam,
+    kerupuk makaroni kuning,
+    kerupuk mawar cream,
+    kerupuk tempe bulat,
+    kerupuk tiga roda,
+    kerupuk udang mede,
+    kerupuk ceriping pedas,
+    kerupuk ikan putih,
+    kerupuk udang kuning,
+    kerupuk udang salju,
+    keruuk mangkok udang,
+    kerupuk mawar kuning,
+    kerupuk mawar pink,
+    kerupuk t-extra,
+    kerupuk kasandra warna,
+    kerupuk kepang mas,
+    kerupuk kepang warna,
+    kerupuk mawar pink,
+    kerupuk mawar putih,
+    kerupuk mawar warna,
+    kerupuk penting,
+    kerupuk manggar,
+    kerupuk rantai jumbo orange,
+    kerupuk rantai jumbo pink,
+    kerupuk rantai jumbo putih,
+    kerupuk rantai jumbo warna warni,
+    kerupuk rantai lemon warna,
+    kerupuk rantai putih sedang rasa,
+    kerupuk rantai sedang putih,
+    "
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Penyedia aneka kerupuk nusantara terlengkap dan berbagai rasa"
     />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_pusat_kerupuk.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preload" href="%PUBLIC_URL%/App.css" as="style">
+    <link rel="stylesheet" href="%PUBLIC_URL%/App.css">
+
+    <style>
+      #title-pusat-kerupuk {
+        font-size: 20px;
+        font-weight: bold;
+        color: #333;
+        font-family: Arial, sans-serif;
+      }
+    </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,7 +90,7 @@
     <title>Pusat Kerupuk Indonesia</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Aneka Kerupuk Indonesia</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -42,7 +104,7 @@
     -->
   </body>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6731HVMLH"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-C6731HVMLH"></script> -->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -50,9 +112,9 @@
 
     gtag('config', 'G-C6731HVMLH');
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5999180990383610"
-  crossorigin="anonymous"></script>
-  <script>
+  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5999180990383610"
+  crossorigin="anonymous"></script> -->
+  <!-- <script>
     import i18n from '../src/i18n.js';
     window.onload = function () {
       i18n.changeLanguage(navigator.language);
@@ -66,5 +128,5 @@
         document.getElementById('root').classList.add('loaded');
       });
     };
-  </script>
+  </script> -->
 </html>
