--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,25 @@
     <link rel="icon" href="%PUBLIC_URL%/logo_pusat_kerupuk.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="xBaTMsr3pWOuUzfUBfudkKPUfCXW9emb43cUXdiSkHY" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-MWZ8X3WQ');</script>
+      <!-- End Google Tag Manager -->
+
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-342704536">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-342704536');
+    </script>
     <meta 
     name="keywords" 
     content="
@@ -74,73 +93,13 @@
         font-family: Arial, sans-serif;
       }
     </style>
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Pusat Kerupuk Indonesia",
-        "url": "https://pusatkerupukindonesia.com",
-        "logo": "%PUBLIC_URL%/logo_pusat_kerupuk.png",
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+62-812-3456-7890",
-          "contactType": "customer service"
-        },
-        "sameAs": [
-          "https://maps.app.goo.gl/ztBKgq5nx64yTgjM9",
-          "https://maps.app.goo.gl/8MRFr5VNWBq77QBr7"
-        ],
-        "location": [
-          {
-            "@type": "Place",
-            "name": "Distributor | Agen Kerupuk Mentah Sumatera | Medan | Aceh",
-            "address": {
-              "@type": "PostalAddress",
-              "streetAddress": "Jalan Kerupuk No. 1",
-              "addressLocality": "Medan",
-              "addressRegion": "Sumatera Utara",
-              "postalCode": "20111",
-              "addressCountry": "ID"
-            },
-            "geo": {
-              "@type": "GeoCoordinates",
-              "latitude": -3.588,
-              "longitude": 98.673
-            },
-            "url": "https://maps.app.goo.gl/ztBKgq5nx64yTgjM9"
-          },
-          {
-            "@type": "Place",
-            "name": "Grosir Agen Kerupuk Mentah Jakarta",
-            "address": {
-              "@type": "PostalAddress",
-              "streetAddress": "Jalan Kerupuk No. 2",
-              "addressLocality": "Jakarta",
-              "addressRegion": "DKI Jakarta",
-              "postalCode": "10110",
-              "addressCountry": "ID"
-            },
-            "geo": {
-              "@type": "GeoCoordinates",
-              "latitude": -6.2088,
-              "longitude": 106.8456
-            },
-            "url": "https://maps.app.goo.gl/8MRFr5VNWBq77QBr7"
-          }
-        ]
-      }
-    </script>
     <title>Pusat Kerupuk Indonesia</title>
   </head>
   <body>
-    <noscript>Aneka Kerupuk Indonesia</noscript>
     <div id="root"></div>
-    <script defer>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-C6731HVMLH');
-    </script>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MWZ8X3WQ"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
